# tema

./: .coverage  .coveragerc  .dockerignore  .gitignore  Dockerfile  Readme.md  haskell_tutor.db  pyproject.toml  railway.toml  requirements.txt  test.hs  web_editor.html
ai_haskell_lsp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: database.py  lsp_server.py  main.py  patch_web_server.py  web_server.py
server/ai/: __init__.py  context.py  engine.py  prompts.py
server/ghc/: bridge.py  init.py  models.py  parser.py
tests/: test_ai_engine.py  test_comprehensive.py  test_database.py  test_ghc_parser.py  test_lsp_integration.py  test_web_server.py
vscode-extension/: haskell-ai-lsp-0.1.0.vsix  language-configuration.json  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extesion/src/: extension.ts
