[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project Metadata ──────────────────────────────────────────────────────

[project]
name = "ai-haskell-lsp"
version = "0.1.0"
description = "AI-assisted language server for Haskell — adaptive compiler feedback for functional programming education"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

keywords = [
    "haskell",
    "language-server",
    "lsp",
    "functional-programming",
    "education",
    "ai",
    "ghc",
]

dependencies = [
    "pygls==1.3.1",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "websockets==13.1",
    "anthropic==0.40.0",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.27.2",
]

# ── Entry Points ──────────────────────────────────────────────────────────
# These allow running the server directly after `pip install -e .`

[project.scripts]
haskell-lsp        = "server.main:run_lsp"       # VS Code / LSP stdio mode
haskell-lsp-web    = "server.main:run_web"        # Web editor WebSocket mode

# ── Package Discovery ─────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

# ── Pytest Configuration ──────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths        = ["tests"]
asyncio_mode     = "auto"
addopts          = "-v --tb=short --cov=server --cov-report=term-missing"
python_files     = ["test_*.py"]
python_functions = ["test_*"]

# ── Coverage ──────────────────────────────────────────────────────────────

[tool.coverage.run]
source  = ["server"]
omit    = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
fail_under   = 60          # Minimum acceptable coverage % for CI